[package]
name = "apk-toolbox"
description = "Compile and decompile APK files with ease, no need to remember complex commands."
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
num_cpus = "1.17.0"
serde = "1.0.228"
serde_json = "1.0.149"
serde_valid = { version = "2.0.1", features = ["toml"] }
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.18"
toml = "1.1.2"
